# xbows-driver

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
doc/: api.md  config.md  examples.md  quick-start.md  spec.md  status.md
share/: default-prog1.yaml  default-prog2.yaml  default-prog3.yaml  default-prog4.yaml  default-prog5.yaml  effect-7-color.yaml  effect-breathe-blue.yaml  effect-breathe-cyan.yaml  effect-breathe-green.yaml  effect-breathe-purple.yaml  effect-breathe-red.yaml  effect-breathe-white.yaml  effect-breathe-yellow.yaml  effect-calculator.yaml  effect-caterpillar.yaml  effect-cloud.yaml  effect-color-flow.yaml  effect-corners.yaml  effect-cycle.yaml  effect-flashing.yaml  effect-flow.yaml  effect-full-blue.yaml  effect-full-cyan.yaml  effect-full-green.yaml  effect-full-purple.yaml  effect-full-red.yaml  effect-full-white.yaml  effect-full-yellow.yaml  effect-geek.yaml  effect-gradual-brighten.yaml  effect-gradual-change.yaml  effect-neon.yaml  effect-rainbow.yaml  effect-rgb-light-wave.yaml  effect-rgb.yaml  effect-spectral-h.yaml  effect-spectral-x.yaml  effect-walk-wave.yaml  effect-water-wave.yaml  effect-water-waves.yaml  (+2 more)
src/: CMakeLists.txt  custom_layer.cc  custom_layer.hh  driver_layer.cc  driver_layer.hh  driver_parse.cc  driver_parse.hh  driver_test.txt  kbdtest.cc  kbdtest2.cc  keymap.cc  keymap.hh  layer.cc  layer.hh  packet.cc  packet.hh  test-custom1-light.yaml  test-custom2-flashlight.yaml  test-driver-keymap.yaml  test-driver-layer.yaml  test-driver-trail.yaml  testparse.cc  timer.hh  xbows.cc  xbows.hh
